--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-sm">
+  <div class="col-sm-4">
     <app-transfer></app-transfer>
   </div>
-  <div class="col-sm">
+  <div class="col-sm-8">
     <app-transactions></app-transactions>
   </div>
 </div>
