--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,3 +1,8 @@
-<p>
-  transactions works!
-</p>
+<div class="card">
+    <div class="card-header">
+      <h3>Recent Transactions</h3>
+    </div>
+    <div class="card-body">
+      Basic card
+    </div>
+  </div>
