--- a/src/app/components/transfer/transfer.component.html
+++ b/src/app/components/transfer/transfer.component.html
@@ -1,3 +1,8 @@
-<p>
-  transfer works!
-</p>
+<div class="card">
+  <div class="card-header">
+    <h3>Make a Transfer</h3>
+  </div>
+  <div class="card-body">
+    Basic card
+  </div>
+</div>
