--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <app-transfer></app-transfer>
   </div>
   <div class="col-sm-8">
-    <app-transactions></app-transactions>
+    <app-transactions [transactions]="transactions"></app-transactions>
   </div>
 </div>
 
