menu header, css, colors

--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-expand-md navbar-light bg-primary">
-    <a class="navbar-brand" href="#">Peachtree Bank</a>
+<nav class="navbar navbar-expand-md navbar-light">
+    <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="../../../assets/logo.jpg" class="logo" alt="Peachtree Bank"></a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-        
+    </div>
     
 </nav>
