card header looking nice

--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,6 +1,7 @@
 <div class="card">
-    <div class="card-header">
-      <h3>Recent Transactions</h3>
+    <div class="card-header green-title text-center">
+        <img src="../../../assets/icons/suitcase.png" class="tabicon">
+      Recent Transactions
     </div>
     <div class="card-body">
       <div class="row">
