--- a/src/app/components/transfer/transfer.component.html
+++ b/src/app/components/transfer/transfer.component.html
@@ -1,6 +1,7 @@
 <div class="card">
-  <div class="card-header">
-    <h3>Make a Transfer</h3>
+  <div class="card-header green-title text-center">
+    <img src="../../../assets/icons/exchange.png" class="tabicon">
+    Make a Transfer
   </div>
   <div class="card-body">
     Basic card
