--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="card-body">
       <div class="row">
-        <div class="col-xl-5 col-12 searchbar">
-          <input type="search" class="form-control" [(ngModel)]="searchBy" placeholder="Search by typing...">
+        <div class="col-xl-5 col-12 searchbar mb-3">
+          <input type="search" class="form-control control-underline" [(ngModel)]="searchBy" placeholder="Search by typing...">
         </div>
         <div class="col-xl-7 col-12 searchbar">
           Sory by 
