--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-4">
-    <app-transfer></app-transfer>
+    <app-transfer [transactions]="transactions" (pushTransaction)="addTransaction($event)"></app-transfer>
   </div>
   <div class="col-sm-8">
     <app-transactions [transactions]="transactions"></app-transactions>
