--- a/src/app/components/transfer/transfer.component.css
+++ b/src/app/components/transfer/transfer.component.css
@@ -2,3 +2,10 @@
   background-color: #ee7033;
   border-color: #ee7033;
 }
+
+.preview {
+  background-color: antiquewhite;
+  border-radius: 5px;
+  margin: 20px 0 20px 0;
+  padding: 5px;
+}
