--- a/src/app/components/transfer/transfer.component.html
+++ b/src/app/components/transfer/transfer.component.html
@@ -4,34 +4,92 @@
     Make a Transfer
   </div>
   <div class="card-body">
-      <form [formGroup]="tranForm" (ngSubmit)="makeTransfer()">
-          <div class="form-group">
-            <label for="fromAccount" class="formlabel">FROM ACCOUNT</label>
-            <input type="text" id="fromAccount" fromAccount="task" 
-              formControlName="fromAccount" class="form-control control-underline" placeholder="fromAccount">
-          </div>
-          <div class="form-group">
-            <label for="toAccount" class="formlabel">TO ACCOUNT</label>
-            <input type="text" id="toAccount" name="toAccount" 
-              formControlName="toAccount" class="form-control control-underline" placeholder="Pleae enter the target account">
-          </div>
-          <div class="form-group">
-            <label for="amount" class="formlabel">AMOUNT</label>
-            <input type="text" id="amount" name="amount" 
-              formControlName="amount" class="form-control control-underline" placeholder="amount">
-          </div>
-          <div class="row">
-            <div class="col-4">
+    <form [formGroup]="tranForm" (ngSubmit)="preview()">
+      <div class="form-group">
+        <label for="fromAccount" class="formlabel">FROM ACCOUNT</label>
+        <input type="text" id="fromAccount" name="fromAccount" value="{{accountName}} - {{balance}}" class="form-control control-underline"
+          placeholder="fromAccount" disabled>
+      </div>
+      <div class="form-group">
+        <label for="toAccount" class="formlabel">TO ACCOUNT</label>
+        <input type="text" id="toAccount" name="toAccount" formControlName="toAccount" 
+        class="form-control control-underline"
+        [ngClass]="{ 'is-invalid': submitted && f.toAccount.errors }"
+          placeholder="Pleae enter the target account">
+        <div *ngIf="submitted && f.toAccount.errors" class="invalid-feedback">
+          <div *ngIf="f.toAccount.errors.required">To Account is required</div>
+        </div>
 
-            </div>
-            <div class="col-8">
-                <button type="submit" 
-                class="btn btn-primary submit-button btn-block" 
-                >SUBMIT</button>
-                <!-- [disabled]="!tranForm.valid" -->
-            </div>
-          </div>
+        
+      </div>
+      <div class="form-group">
+        <label for="amount" class="formlabel">AMOUNT</label>
+        <input type="text" id="amount" name="amount" formControlName="amount" 
+        class="form-control control-underline"
+        [ngClass]="{ 'is-invalid': submitted && f.amount.errors }"
+        placeholder="amount">
+        <div *ngIf="submitted && f.amount.errors" class="invalid-feedback">
+          <div *ngIf="f.amount.errors.required">Amount is required</div>
+        </div>
           
-      </form>
+      </div>
+      <div class="row">
+        <div class="col-4">
+
+        </div>
+        <div class="col-8">
+          <button type="submit" class="btn btn-primary submit-button btn-block">SUBMIT</button>
+          <!-- [disabled]="!tranForm.valid" -->
+        </div>
+      </div>
+
+    </form>
+
+    <div *ngIf="showPreview">
+    <div class="preview" >
+      <div class="row p-2">
+        <div class="col-4 formlabel">
+          From:
+        </div>
+        <div class="col-8">
+            {{accountName}}
+        </div>
+      </div>
+      <div class="row p-2">
+          <div class="col-4 formlabel">
+            Balance:
+          </div>
+          <div class="col-8">
+              {{balance | currency:'$'}}
+          </div>
+        </div>
+      <div class="row p-2">
+        <div class="col-4 formlabel">
+          To:
+        </div>
+        <div class="col-8">
+            {{toAccount}}
+        </div>
+      </div>
+      <div class="row p-2">
+        <div class="col-4 formlabel">
+          Amount:
+        </div>
+        <div class="col-8">
+            {{amount | currency:'$'}}
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <button type="button" class="btn btn-warning" (click)="cancelPreview()">CANCEL</button>
+      </div>
+      <div class="col-8">
+        <button type="button" class="btn btn-primary submit-button btn-block" (click)="transfer()">TRANSFER</button>
+        <!-- [disabled]="!tranForm.valid" -->
+      </div>
+    </div>
+  </div>
+
   </div>
 </div>
