--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-lg-4">
     <app-transfer [transactions]="transactions" (pushTransaction)="addTransaction($event)"></app-transfer>
   </div>
-  <div class="col-sm-8">
+  <div class="col-lg-8">
     <app-transactions [transactions]="transactions"></app-transactions>
   </div>
 </div>
