--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
     <div class="card-header green-title text-center">
         <img src="../../../assets/icons/suitcase.png" class="tabicon">
       Recent Transactions
