--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Kanit:300,400');
 body {
-  background-image: url('../src/assets/background.jpg');
+  background: url('../src/assets/background.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Kanit', sans-serif;
 }
